--- a/less/higherr/pages/shared.less
+++ b/less/higherr/pages/shared.less
@@ -3,10 +3,10 @@
 #header-expansion {
 	position: absolute;
 	width: 100%;
-	height: 100px;
-	background: white;
+	height: 150px;
+	background: @mainnav-bg;
 }
 
 #container #content-container, #container #footer {
-	padding-left: 0;
+	padding-left: 0!important;
 }
