--- a/less/higherr/pages/shared.less
+++ b/less/higherr/pages/shared.less
@@ -14,10 +14,11 @@
 
 .grid {
 	margin: auto;
-	
+
 	.grid-item {
 		width: 240px;
 		height: 300px;
 		margin-bottom: 20px;
+		border-radius: 5px;
 	}
 }
