--- a/less/higherr/pages/shared.less
+++ b/less/higherr/pages/shared.less
@@ -3,6 +3,7 @@
 #header-expansion {
 	position: absolute;
 	z-index: 100;
+	top: 50px;
 	width: 100%;
 	height: 150px;
 	background: fade(@mainnav-bg, 90%);
@@ -16,9 +17,13 @@
 	margin: auto;
 
 	.grid-item {
-		width: 240px;
+		width: @grid-item-w;
 		height: 300px;
-		margin-bottom: 20px;
+		margin-bottom: @grid-gutter;
 		border-radius: 5px;
+	}
+	
+	.grid-item-w-2 {
+		width: 2 * @grid-item-w + @grid-gutter;
 	}
 }
